Bug 278724 - Application launchers cannot be removed
Summary: Application launchers cannot be removed
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: 4.8.3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 275175 278696 279181 279533 280032 281005 283167 283377 283448 284628 290733 293240 309903 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-28 18:39 UTC by Bartosz Brachaczek
Modified: 2012-11-11 17:39 UTC (History)
29 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments
An active window (3.34 KB, image/png)
2011-08-03 10:23 UTC, ealexp
Details
Highlighted windows (10.51 KB, image/png)
2011-08-03 10:23 UTC, ealexp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bartosz Brachaczek 2011-07-28 18:39:39 UTC
Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

I started using KDE 4.7 RC2 on a completely new profile (~/.kde4, I mean). And after at most two days two launchers began showing on my taskbar: for Firefox and for Dolphin. These are those launchers that are shown only if application is not active. But I am absolutely sure I have never used that option, even accidentally.
Furthermore, when I right click on these apps' entries in taskbar when they are active, I see that option is disabled.
If I enable that option for these apps, a second launcher per app appears. After disabling that option only those second launchers disappear. I noticed that those "good" launchers are named "Firefox" and "Dolphin", while those "bad" "firefox" and "dolphin".
Removing those launchers when the applications are not active help only until I log in next time.

Reproducible: Didn't try

Steps to Reproduce:
Not known.


Expected Results:  
Such launchers never appear. And even if they do, they can be removed by the users.
Comment 1 Christoph Feck 2011-07-28 23:03:42 UTC
*** Bug 278696 has been marked as a duplicate of this bug. ***
Comment 2 ealexp 2011-07-31 07:48:41 UTC
It happens to me too (I'm using KDE 4.7 on a new profile).
Comment 3 cyrus_xiii 2011-07-31 11:35:23 UTC
Same happens here, with reappearing Dolphin and Google Chrome launchers. I assume it goes for any browser it finds in the application launcher favorites then?
Comment 4 Richard 2011-07-31 17:50:19 UTC
I can confirm this issue on a new installation of Gentoo Linux.
Comment 5 Richard 2011-07-31 17:57:15 UTC
After examining this a bit more, this only appears to occur on a new installation of KDE 4.7. I copied ~/.kde4/share/config/plasma-desktop-appletsrc from an installation I upgraded from KDE 4.6 and this problem went away. I lost the Activities widget by doing this, but I wasn't very fond of it in the first place.
Comment 6 Richard 2011-07-31 17:57:47 UTC
*** This bug has been confirmed by popular vote. ***
Comment 7 Vasileios P. Lourdas 2011-08-02 16:29:08 UTC
A solution is to remove the task manager applet and add a new one. No launchers will ever appear again.
Comment 8 ealexp 2011-08-03 10:23:15 UTC
Created attachment 62499 [details]
An active window
Comment 9 ealexp 2011-08-03 10:23:36 UTC
Created attachment 62500 [details]
Highlighted windows
Comment 10 Bartosz Brachaczek 2011-08-03 12:21:18 UTC
@ealexp: I think you meant to attach those screenshots to another bug report.
Comment 11 ealexp 2011-08-03 12:32:29 UTC
Well, actually yes. 
Sorry.
Comment 12 Christoph Feck 2011-08-03 17:36:57 UTC
*** Bug 275175 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2011-08-05 16:02:24 UTC
*** Bug 279181 has been marked as a duplicate of this bug. ***
Comment 14 Christoph Feck 2011-08-06 14:19:54 UTC
*** Bug 279533 has been marked as a duplicate of this bug. ***
Comment 15 Timothée Ravier 2011-08-30 11:56:13 UTC
Found a workaround: http://forum.kde.org/viewtopic.php?f=66&t=96351
Comment 16 Christoph Feck 2011-08-30 23:08:13 UTC
*** Bug 281005 has been marked as a duplicate of this bug. ***
Comment 17 Christoph Feck 2011-10-03 22:56:47 UTC
*** Bug 283167 has been marked as a duplicate of this bug. ***
Comment 18 Christoph Feck 2011-10-18 12:54:36 UTC
*** Bug 283377 has been marked as a duplicate of this bug. ***
Comment 19 Christoph Feck 2011-10-18 12:56:49 UTC
*** Bug 283448 has been marked as a duplicate of this bug. ***
Comment 20 Anne-Marie Mahfouf 2012-01-05 20:04:28 UTC
Reassigning to panel component (taskbar is often used instead of panel).
Comment 21 Anne-Marie Mahfouf 2012-01-05 20:05:15 UTC
*** Bug 290733 has been marked as a duplicate of this bug. ***
Comment 22 Nikos Chantziaras 2012-01-05 20:11:13 UTC
I have the same problem with 4.8 RC2.
Comment 23 Anne-Marie Mahfouf 2012-01-06 08:46:21 UTC
The launchers are not shown as I restore my session and my default browser and file manager run.

My bad: I thought these launchers were icons in the panel, I discovered this morning they are launchers in the Task Manager!
Comment 24 Benjamin M 2012-01-29 13:34:50 UTC
I didn't have this in 4.7, but it started to happen in 4.8. There's a Dolphin and a Firefox launcher in the task manager and I cannot remove either for good, they keep reappearing when I restart KDE.
Comment 25 Nikos Chantziaras 2012-01-29 19:30:33 UTC
Issue still there with 4.8.0 final.
Comment 26 Anne-Marie Mahfouf 2012-02-04 20:29:04 UTC
*** Bug 293240 has been marked as a duplicate of this bug. ***
Comment 27 Karl-Johan Karlsson 2012-03-15 00:09:21 UTC
A problem which I think is related appeared for me as well, on a fresh installation (new machine, new profile directory) of KDE 4.8.1 on Gentoo. I have never configured my default web browser in KDE, but I have installed Opera, Firefox, Konqueror and Dolphin.

I had two launchers, both for Konqueror. Clicking either of them started an infinite amount of Konqueror windows, all visiting http://www.google.co.uk/. The only way to get control back was SSH:ing in from another machine and running "killall konqueror", after which no more Konqueror windows got created. Incidentally, starting Konqueror from the K menu starts only one window, which can visit http://www.google.co.uk/ without problems.

After removing and re-adding the task manager as per comment 7, neither launcher has reappeared.
Comment 28 Malvern Star 2012-04-20 20:24:36 UTC
This problem occurred intermittently during testing of openSUSE 12.1 but not in final relase, and it is now back again in openSUSE 12.2 Milestone 3, which uses KDE 4.8.1. As per the link to the KDE forums and comment 24, a Dolphin and a Firefox launcher continually re-appear on every login and have to be manually removed any time. Could we get a fix for this given how badly it breaks the user experience?
Comment 29 Francesco Cusolito 2012-05-24 07:02:24 UTC
Same problem here on a NOT fresh install on gentoo, kde 4.8.3.
I assume the launchers that are recreated are the ones for default browser and file manager; what i can't understand is why my web browser launcher open konqueror at "http://www/text/" which is an invalid address.

Confirm that removing the task manager and readding it fix (for now) the problem
Comment 30 Diego Viola 2012-05-28 12:31:55 UTC
I have this same issue also, with KDE 4.8.3 and archlinux x86-64. Any ideas when it will be resolved?

It's really annoying to remove those launchers ervery time I start KDE.

Thanks.
Comment 31 Nikos Chantziaras 2012-05-28 12:37:58 UTC
(In reply to comment #30)
> I have this same issue also, with KDE 4.8.3 and archlinux x86-64. Any ideas
> when it will be resolved?
> 
> It's really annoying to remove those launchers ervery time I start KDE.

Delete the current task manager plasmoid and insert a new one. The problem will be gone once and for all then.
Comment 32 Diego Viola 2012-05-28 12:43:15 UTC
(In reply to comment #30)
> I have this same issue also, with KDE 4.8.3 and archlinux x86-64. Any ideas
> when it will be resolved?
> 
> It's really annoying to remove those launchers ervery time I start KDE.
> 
> Thanks.

*every
Comment 33 Diego Viola 2012-05-28 13:15:02 UTC
(In reply to comment #31)
> (In reply to comment #30)
> > I have this same issue also, with KDE 4.8.3 and archlinux x86-64. Any ideas
> > when it will be resolved?
> > 
> > It's really annoying to remove those launchers ervery time I start KDE.
> 
> Delete the current task manager plasmoid and insert a new one. The problem
> will be gone once and for all then.

That's probably fine as a workaround, but do you know if this problem will really be fixed for 4.9?
Comment 34 Diego Viola 2012-05-28 13:15:42 UTC
or an upcoming version of KDE.
Comment 35 Timothée Ravier 2012-06-02 10:28:12 UTC
Fedora KDE and Kubuntu default desktop does not have those application launchers. Do we really need them by default ? Maybe, they could juste be removed in the base configuration file created when a user first log in ?
Comment 36 Gregor Tätzner 2012-06-28 15:53:46 UTC
someone qualified may look at this: https://git.reviewboard.kde.org/r/105374/
Comment 37 Rex Dieter 2012-07-19 16:04:13 UTC
*** Bug 284628 has been marked as a duplicate of this bug. ***
Comment 38 Oliver Henshaw 2012-07-19 17:00:11 UTC
(In reply to comment #36)
> someone qualified may look at this: https://git.reviewboard.kde.org/r/105374/
Does this also address the problem described in bug 284350 ? It's a dupe of a dupe but it might deserve re-opening if it's unrelated to the current bug.
Comment 39 Gregor Tätzner 2012-07-26 12:37:04 UTC
Git commit f8eb85a87846e49b10dae8170695533262011ae1 by Gregor Tätzner.
Committed on 26/07/2012 at 14:32.
Pushed by gregort into branch 'master'.

Fix deletion of preferred application launchers

In default panel config the host of that magic preferred app url is used
as the key. So lets use that key to delete the launchers, too.
FIXED-IN: 4.9.1
REVIEW: 105374

M  +11   -3    libs/taskmanager/groupmanager.cpp

http://commits.kde.org/kde-workspace/f8eb85a87846e49b10dae8170695533262011ae1
Comment 40 Gregor Tätzner 2012-07-26 12:38:03 UTC
Git commit 70cd86a5eef103137e64f2e3868a5bd2d58d71d7 by Gregor Tätzner.
Committed on 26/07/2012 at 14:32.
Pushed by gregort into branch 'KDE/4.9'.

Fix deletion of preferred application launchers

In default panel config the host of that magic preferred app url is used
as the key. So lets use that key to delete the launchers, too.
FIXED-IN: 4.9.1
REVIEW: 105374

M  +11   -3    libs/taskmanager/groupmanager.cpp

http://commits.kde.org/kde-workspace/70cd86a5eef103137e64f2e3868a5bd2d58d71d7
Comment 41 Diego Viola 2012-07-26 22:24:49 UTC
Thanks for fixing this. You guys rock. :)
Comment 42 Diego Viola 2012-07-26 23:03:03 UTC
Now if only this bug could be fixed: Bug 224447

The only issue left I have with KDE will be gone then.
Comment 43 Gregor Tätzner 2012-08-22 17:26:24 UTC
*** Bug 280032 has been marked as a duplicate of this bug. ***
Comment 44 Diego Viola 2012-09-05 22:08:07 UTC
I can confirm that this issue is now fixed.

Arch Linux x86_64

Huge thanks to the devs.
Comment 45 Christoph Feck 2012-11-11 17:39:27 UTC
*** Bug 309903 has been marked as a duplicate of this bug. ***