Fix deletion of preferred application launchers

In default panel config the host of that magic preferred app url is used
as the key. So lets use that key to delete the launchers, too.

BUG: 278724
FIXED-IN: 4.9.1
REVIEW: 105374